fix stretch

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -145,6 +145,10 @@ body {
   &--play {
     mask-image: url("assets/svg/play.svg");
   }
+
+  &--linkedin {
+    mask-image: url("assets/svg/icons/linkedin.svg");
+  }
 }
 
 .shadow {
