--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -56,6 +56,7 @@ body {
 
   .dynamic-mode & {
     overflow: hidden;
+    height: calc(100vh - 48px);
   }
 
   .static-mode & {
@@ -66,6 +67,7 @@ body {
 
 .scroller-border {
   flex: 0 0 48px;
+  height: 48px;
   width: 100%;
   position: relative;
 
